src/components/dashboard/Dashboard/Dashboard.css
.dashboard_right_second{
    font-family: 'Public Sans', sans-serif;
    /* background-color: #2F3248;  */
    /* background-color: var(--background-color); */
    background: transparent;
    color: var(--text-color);
    /* height: 100vh; */
    display: grid;
    grid-template-columns: 1.5fr 1fr 1fr;
    grid-template-rows: 1fr 1.5fr;
    gap:1.2rem;
}






.dashboard_right_second div{
    border-radius: 10px;
}
.lifetime_data{
    background-color: rgba(170,62,255,0.2);
    color:white;
    display: flex;
    padding: 3%;
}


.lifetime_data_content{
    flex:0.65;
}
.lifetime_data_content_heading{
    font-size: 1.2rem;
    margin:8% 0 12% 0%;
}

.lifetime_data_content_grid{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1.4fr;
    margin-top: 2rem;
    font-size: 0.8rem;
    row-gap: 20%;
}
.lifetime_data_image {
    flex: 0.45;
    display: flex;
    align-items: center;

}
.lifetime_data_image img{
    width: 100%;
}
.total_invoice{
    display: flex;
    align-items: center;
}
.amount_due{
    display: flex;
    align-items: center;
}
.invoice_due{
    display: flex;
    align-items: center;
}



.dashboard_QOD_heading{
    color: #3FFFFF;
}





.dashboard_graph{
    background-color: rgba(101,118,134,0.2);
}
.dashboard_graph_chart_heading{
    padding: 5%;
    display: flex;
    align-items: center;
}


.dashboard_QOD{
    background-color: rgba(101,118,134,0.2);
    padding: 6%;
    overflow-y: scroll;
   
}
.dashboard_QOD_heading{
    color: #3FFFFF;
}
.dashboard_QOD_quote{
    margin-top: 8%;
}

.dashboard_main_part{
    grid-column: span 3;
    background-color: #8CABFF;
}






@media screen and (max-width: 949px) {
 
    .lifetime_data{
        grid-column: span 3;
    }
    .lifetime_data_image {
        flex: 0.45;
        display: flex;
        align-items: center;
        justify-content: center;
        
    }
    .lifetime_data_image img {
        width: 70%;
    }
    .lifetime_data_content_heading{
        font-size: 1.6rem;
        margin:2% 0 2% 0%;
    }

    .lifetime_data_content_grid{
        margin-top: 1rem;
        font-size: 1rem;
        row-gap: 20%;
    }
    .dashboard_right_second{

        grid-template-columns: 1fr 1fr;
        grid-template-rows: 0.8fr 1fr 2fr;
        gap:1.2rem;
    }
    



    .dashboard_QOD{
        grid-column: span 2;
    }
  }

